fix API role and create course (Instructor)